<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>test_zenoh</name>
    <version>0.0.1</version>
    <description>A test reproducing a topic coonnection bug</description>
    <maintainer email="bassamarco91@gmail.com">Marco Bassa</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_ros</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>